--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype HTML>
 <html>
+ <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
  <head><title>Sims4Lib</title>
        <center><h1>Sims Lib</h1></center>
  </head>
