--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
  <link rel="icon" type="image/png" sizes="16x16"  href="/favicon-16x16.png">
+ <link rel="stylesheet" type="style/css" href="/style.css"
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
  <head><title>Sims4Lib</title>
