--- a/saves.html
+++ b/saves.html
@@ -4,10 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="C:\Users\Utilisateur\Desktop\Projets\SimsLib\Code\style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SimsLibrary | Home</title>
+	<title>SimsLibrary | Saves</title>
 	<center>	<div class="title">
 	<center><h1>SimsLib</h1></center>
-	<center><h3>The best library of Sims 4 by the FoxGamingCorp</h3></center>
+	<center><h3>Selections de sauvegardes</h3></center>
 	<p></p>
 	<center><a href="downloads.html"><button>Downloads</button></a></center>
     </div>
@@ -18,8 +18,7 @@
     <center>
     	<div class="title">
     	<h1>A la Une</h1>
-    	<p>Mods:    <a href="mods.html"><button>Voir</button></a></p>
-    	<p>Sauvegardes: <a href="saves.html"><button>Voir</button></a></p>
+    	<p>Pack cool (<a href="insert.txt">infos</a>) :    <a href="https://www.dropbox.com/s/5zq4r6rvoskv1dh/Slot_00000904.save.zip?dl=1"><button>Telecharger</button></a></p>
     </div>
     </center>
 </body>
